<resources>

    <string name="app_name">公職人員協會</string>
    <string name="intro_name">協會簡介</string>
    <string name="speak_name">自由講</string>
    <string name="dynamic_name">協會活動</string>
    <string name="court_name">立法會</string>
    <string name="user_name">我的賬戶</string>
    <string name="main_title_name">公職人員協會</string>
    <string name="member_list">成員列表</string>
    <string name="speak_publish">我要發言</string>
    <string name="like_title">點讚</string>
    <string name="comment_title">留言</string>
    <string name="collect_title">收藏</string>
    <string name="dynamic_content">詳細</string>
    <string name="speak_content">自由講詳細</string>
    <string name="court_content">立法會詳細</string>
    <string name="welcome">歡迎您來到澳門公職人員協會</string>
    <string name="login">登錄</string>
    <string name="register">註冊</string>
    <string name="confirm_register">確定註冊</string>
    <string name="compile_myself">編輯個人資料</string>
    <string name="my_speak">我的發言</string>
    <string name="my_message">我的消息</string>
    <string name="my_like">我贊過的</string>
    <string name="my_collect">我收藏的</string>
    <string name="vip_level">會員標示</string>
    <string name="vip_level_title">會員標示</string>
    <string name="help">幫助</string>
    <string name="delete_message">清除緩存</string>
    <string name="office">軟體發展與運營───中澳國際顧問有限公司</string>
    <string name="logout">退出</string>
    <string name="input_tel">請輸入電話號碼</string>
    <string name="tel">電話號碼</string>
    <string name="input_password">請輸入密碼</string>
    <string name="new_register">新用戶註冊</string>
    <string name="or">或</string>
    <string name="look_look">先看看</string>
    <string name="forget_password">忘記密碼</string>
    <string name="must">*必填</string>
    <string name="input_p_name">請輸入葡文名稱</string>
    <string name="p_name">葡文名稱</string>
    <string name="input_s_name">請輸入中文名稱</string>
    <string name="s_name">中文名稱</string>
    <string name="input_password_again">請再次輸入密碼</string>
    <string name="input_old_password">請輸入原密碼</string>
    <string name="input_new_password">請輸入新密碼</string>
    <string name="input_new_password_again">請再次輸入新密碼</string>
    <string name="send">發送</string>
    <string name="send_succeed">發送成功~!</string>
    <string name="detail">詳細</string>
    <string name="send_title">發出的</string>
    <string name="take_titke">收到的</string>
    <string name="reset_password">重設密碼</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="this_time_idea">請輸入發言內容...</string>
    <string name="head">頭像</string>
    <string name="revamp_head">更換頭像</string>
    <string name="image_title">圖片</string>
    <string name="picture">張</string>
    <string name="a_picture">張相片哦~</string>
    <string name="select">選擇</string>
    <string name="i_know">我知道了</string>
    <string name="max_image">您最多只能選擇</string>
    <string name="tel_not_null">手機號碼不能為空</string>
    <string name="pass_not_null">密碼不能為空</string>
    <string name="pname_not_null">葡文名稱不能為空</string>
    <string name="pass_length">密碼長度需6-20位</string>
    <string name="login_succeed">登錄成功!</string>
    <string name="not_sd">未找到儲存卡，無法儲存相片!</string>
    <string name="photo">拍照</string>
    <string name="sd_card_pic">本地圖片</string>
    <string name="register_succeed">註冊成功!</string>
    <string name="last">已經到了最後一頁(⊙﹏⊙ )</string>
    <string name="exception">網絡狀態不佳(⊙﹏⊙)</string>
    <string name="click_connect">點擊重連</string>
    <string name="new_version">有新版本了，請升級！</string>
    <string name="new_version_short">有新版本了，增加了很多功能，需要升級之後才能使用！</string>
    <string name="prepare_download">準備下載</string>
    <string name="failure_download">下載失敗</string>
    <string name="nationality_title">Língua/語言選擇</string>
    <string name="nationality_zh">中文</string>
    <string name="nationality_pt">Português</string>
    <string name="vip_title">會員尊享</string>
    <string name="exit">再次點擊退出</string>
    <string name="first_like">成為第一個點讚的人~!</string>
    <string name="first_comment">成為第一個留言的人~!</string>
    <string name="first_collect">成為第一個收藏的人~!</string>
    <string name="forget_password_message_1">請聯繫我們：</string>
    <string name="forget_password_message_2">macauatfpm5512@gmail.com</string>
    <string name="forget_password_message_3">我們將盡快回復您~</string>
    <string name="please_login">請登錄~</string>
    <string name="ok">好的</string>
    <string name="mais">更多</string>
    <string name="not_content">暫無內容</string>
    <string name="push">推送消息</string>
    <string name="input_code">請輸入短信驗證碼</string>
    <string name="get_code">點擊獲取短信驗證碼</string>
    <string name="sms_exception">驗證碼錯誤</string>
    <string name="vip_dialog_title">【會員尊享】的優惠僅為澳門公職人員協會會員專享，您也趕快加入協會享受優惠吧~</string>
    <string name="vip_dialog_commit">申請入會</string>
    <string name="vip_content">辦理成為公職會會員，盡享會員尊屬優惠</string>
    <string name="phone_message">請確認您的電話號碼，我們將發送驗證碼短信到這個號碼</string>
    <string name="sms_message">短信驗證碼已發送，請填寫驗證碼</string>
    <string name="get_code_time">秒后可重新獲取</string>
    <string name="get_code_message">90秒內如果沒有收到驗證碼，請重新獲取。</string>
    <string name="sms_exception_v2">驗證碼不正確，請重新輸入</string>
    <string name="cade_mo_s_name">澳門</string>
    <string name="cade_hk_s_name">香港</string>
    <string name="cade_cn_s_name">内地</string>
    <string name="cade_mo_l_name">澳門</string>
    <string name="cade_hk_l_name">香港</string>
    <string name="cade_cn_l_name">内地</string>
    <string name="give_up">您要放棄此次編輯嗎?</string>
    <string name="speak_check_text">不再提示 Sem mais avisos</string>
    <string name="close">退出</string>
    <string name="pass_not_consistent">兩次輸入的密碼不一致</string>
    <string name="activity_text">公告</string>
    <string name="dynamic_text">協會</string>
    <string name="privacidade">隱私政策</string>
    <string name="concorda">同意</string>
    <string name="sair">離開</string>

</resources>