<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/white_background_green_frame_0"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:src="@drawable/tel_num" />

                    <EditText
                        android:id="@+id/login_telInput"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_17"
                        android:inputType="number"
                        android:background="@drawable/input_stype_lucency"
                        android:hint="@string/input_tel" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/white_background_green_frame_0"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/login_passwordInput"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_17"
                        android:background="@drawable/input_stype_lucency"
                        android:hint="@string/input_password"
                        android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/login_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/bg_stype_green"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20" />

                    <View
                        android:layout_width="20dp"
                        android:layout_height="1dp" />

                    <TextView
                        android:id="@+id/login_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/bg_stype_red"
                        android:gravity="center"
                        android:text="@string/new_register"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" >

                    <TextView
                        android:id="@+id/login_or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/or"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_17" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@id/login_or"
                        android:background="@color/black" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/login_or"
                        android:background="@color/black" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/login_finish"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/bg_stype_reseda"
                    android:gravity="center"
                    android:text="@string/look_look"
                    android:textColor="@color/text_green_01"
                    android:textSize="@dimen/text_size_20" />

                <TextView
                    android:id="@+id/login_forgetPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/forget_password"
                    android:textColor="@color/text_green_01"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>